syntax = "proto3";

package idl;

service Agent {
    rpc CheckUpgradeStatus (CheckUpgradeStatusRequest) returns (CheckUpgradeStatusReply) {}
    rpc CheckConversionStatus (CheckConversionStatusRequest) returns (CheckConversionStatusReply) {}
    rpc CheckDiskUsageOnAgents (CheckDiskUsageRequestToAgent) returns (CheckDiskUsageReplyFromAgent) {}
    rpc PingAgents (PingAgentsRequest) returns (PingAgentsReply) {}
    rpc UpgradeConvertPrimarySegments (UpgradeConvertPrimarySegmentsRequest) returns (UpgradeConvertPrimarySegmentsReply) {}
}

message UpgradeConvertPrimarySegmentsRequest {
    string oldBinDir = 1;
    string newBinDir = 2;
    repeated DataDirPair dataDirPairs = 3;
}

message DataDirPair {
    string oldDataDir = 1;
    string newDataDir = 2;
    int32  oldPort    = 3;
    int32  newPort    = 4;
    int32  content    = 5;
}

message UpgradeConvertPrimarySegmentsReply {}

message PingAgentsRequest {}
message PingAgentsReply {}

message CheckUpgradeStatusRequest {}

message CheckUpgradeStatusReply {
    string process_list = 1;
}

message CheckConversionStatusRequest {
    repeated SegmentInfo segments = 1;
	string hostname = 2;
}

message SegmentInfo {
	int32 content  = 1;
	int32 dbid     = 2;
	string dataDir = 3;
}

message CheckConversionStatusReply {
    repeated string statuses = 1;
}

message FileSysUsage {
    string filesystem = 1;
    double usage = 2;
}

message CheckDiskUsageRequestToAgent {}

message CheckDiskUsageReplyFromAgent {
    repeated FileSysUsage list_of_file_sys_usage = 1;
}
